--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -18,9 +18,12 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
     "babel-jest": "^29.7.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "identity-obj-proxy": "^3.0.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-module-name-mapper": "^0.1.5"
   }
 }
