--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -10,11 +10,6 @@
     "test": "jest",
     "format": "prettier --write ."
   },
-  "dependencies": {
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
@@ -29,5 +24,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-module-name-mapper": "^0.1.5"
+  },
+  "dependencies": {
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
