--- a/crypto-dashboard/package.json
+++ b/crypto-dashboard/package.json
@@ -26,8 +26,12 @@
     "jest-module-name-mapper": "^0.1.5"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.5",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "next": "^14.1.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0"
   }
 }
